# Python-package

./: pyproject.toml
hexlet_python_package/: __init__.py  half.py
hexlet_python_package/scripts/: main.py
