[project]
authors = [
    {name = "Hexlet team", email = "team@hexlet.io"},
]
requires-python = "<4.0,>=3.12"
name = "python-example-app"
version = "0.1.0"
description = "Example application"
readme = "README.md"
dependencies = [
    "isort>=5.13.2",
    "more-itertools>=10.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.1",
]

[project.scripts]
hexlet-python-package = "hexlet_python_package.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_python_package"]
